--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-router-hash-link": "^2.4.5",
     "@vitejs/plugin-react": "^3.0.0",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
